--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body {
 .slogan {
     color: #999;
     font-size: 14px;
-    font-style: italic;
 }
 
 h1 {
@@ -44,7 +43,7 @@ h1 {
 }
 
 .footer {
-    color: #ccc;
+    color: #ddd;
 }
 
 .fb {
@@ -55,7 +54,15 @@ h1 {
     color: #24292E;
 }
 
+.in {
+    color: #0077B5;
+}
+
 .all-right {
     font-size: 12px;
     margin-top: 10px;
+}
+
+html body a {
+    color: #E91E63
 }
